fix responsive on mobile

--- a/responsive/phone_X.css
+++ b/responsive/phone_X.css
@@ -59,8 +59,8 @@
 
     /* number */
     .anime-quantity {
-        width: 10vw;
-        height: 10vw;
+        width: 11vw;
+        height: 11vw;
         bottom: 5vh;
         left: 5vh;
         padding: 0 0.1vw;
@@ -166,8 +166,8 @@
     }
 
     .anime-link {
-        font-size: 5.5vw;
-        line-height: 6.5vw;
+        font-size: 4.8vw;
+        line-height: 5.3vw;
     }
 
     .anime-tag-wrap {
