--- a/responsive/phone_Y.css
+++ b/responsive/phone_Y.css
@@ -119,14 +119,14 @@
 
     /* header */
     .header {
-        height: 10vh;
+        height: 7vh;
         margin-top: 2vh;
     }
 
     .toggle,
     .menu-header {
-        height: 10vh;
-        border-radius: calc(10vh/2); 
+        height: 7vh;
+        border-radius: calc(7vh/2); 
     }
 
     .menu-header {
@@ -139,7 +139,7 @@
 
     .menu-header i,
     .toggle i {
-        font-size: 5vw;
+        font-size: 3vh;
     }
 
     /* header */
@@ -156,7 +156,7 @@
 
     .anime-level {
         padding: 1vw 4vw;
-        font-size: 5vw;
+        font-size: 4vw;
         border-bottom-right-radius: 4vw;
         letter-spacing: 0.3vw;
     }
@@ -167,8 +167,8 @@
     }
 
     .anime-link {
-        font-size: 6vw;
-        line-height: 7vw;
+        font-size: 4.5vw;
+        line-height: 5.2vw;
     }
 
     .anime-tag-wrap {
